.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

Plone 4.0 - UNRELEASED
----------------------

- Removed accessibility_info page and corresponding JavaScript. The content
  of the page was applicable to Plone itself, but not the site driven by
  Plone. The content is better placed as a marketing text on plone.org.
  [hannosch]

- Removed site_actions action category. The corresponding viewlet uses simple
  static HTML now. You can add your own viewlet instead if you want to
  customize the default.
  [hannosch]

- Fixed the content_status_history form to include the required content table.
  The old_folder_contents template is gone.
  [hannosch]

- Fixed the browserDefault tests to use actual traversal to look up views
  for content items instead of relying on Acquisition.
  [hannosch]

- The remaining functionality from GroupUserFolder has been merged into
  the PlonePAS package. GroupUserFolder is no longer required.
  [hannosch]

- Removed the groups, groupdata, membership and memberdata tools from this
  package. All code is now in a central place inside PlonePAS. The persistent
  tools have been from the PlonePAS package since Plone 2.5.
  [hannosch]

- Fixed and cleaned up the personalize_form.
  [hannosch]

- Moved NuPlone from the standard distribution into the status of a regular
  add-on. Maintaining two different themes hasn't proved itself.
  [hannosch]

- Vastly simplified our skins folder setup. We have only three folders for
  CMFPlone left: plone_images for images and icons, plone_resources for JS,
  CSS and KSS files and plone_browser for all templates and scripts.
  plone_3rdParty is an external that is pulled in separately and should really
  be moved out to its own package.
  [hannosch]

- Moved isExpired script into a method on the context view.
  [hannosch]
