@@ -39,7 +39,6 @@ from Products.CMFPlone.utils import safe_hasattr
 from Products.CMFPlone.interfaces import IBrowserDefault
 from Products.statusmessages.interfaces import IStatusMessage
 from AccessControl.requestmethod import postonly
-from plone.app.linkintegrity.exceptions import LinkIntegrityNotificationException
 
 try:
     from Products.LinguaPlone.interfaces import ITranslatable
@@ -1185,8 +1184,6 @@ class PloneTool(PloneBaseTool, UniqueObject, SimpleItem):
                 obj_parent.manage_delObjects([obj.getId()])
                 success.append('%s (%s)' % (obj.title_or_id(), path))
             except ConflictError:
-                raise
-            except LinkIntegrityNotificationException:
                 raise
             except Exception, e:
                 if handle_errors:
