@@ -15,7 +15,6 @@
   <include package="plone.app.i18n" />
   <include package="plone.app.iterate" />
   <include package="plone.app.layout" />
-  <include package="plone.app.linkintegrity" />
   <include package="plone.app.openid" />
   <include package="plone.app.portlets" />
   <include package="plone.app.redirector" />
