@@ -20,13 +20,6 @@ putils = context.plone_utils
 status='failure'
 message=_(u'Please select one or more items to delete.')
 
-# a hint to the link integrity code to indicate the number of events to
-# expect, so that all integrity breaches can be handled in a single form
-# only;  normally the adapter (LinkIntegrityInfo) should be used here, but
-# this would make CMFPlone depend on an import from LinkIntegrity, which
-# it shouldn't...
-context.REQUEST.set('link_integrity_events_to_expect', len(paths))
-
 success, failure = putils.deleteObjectsByPaths(paths, REQUEST=req)
 
 if success:
