@@ -563,41 +563,3 @@ def scale_image(image_file, max_size=None, default_format=None):
     new_file.seek(0)
     # Return the file data and the new mimetype
     return new_file, mimetype
-
-def isLinked(obj):
-    """ check if the given content object is linked from another one
-        WARNING: don't use this function in your code!!
-            it is a helper for the link integrity code and will potentially
-            abort the ongoing transaction, giving you unexpected results...
-    """
-    # first check to see if link integrity handling has been enabled at all
-    # and if so, if the removal of the object was already confirmed, i.e.
-    # while replaying the request;  unfortunately this makes it necessary
-    # to import from plone.app.linkintegrity here, hence the try block...
-    try:
-        from plone.app.linkintegrity.interfaces import ILinkIntegrityInfo
-        info = ILinkIntegrityInfo(obj.REQUEST)
-    except (ImportError, TypeError):
-        # if p.a.li isn't installed the following check can be cut short...
-        return False
-    if not info.integrityCheckingEnabled():
-        return False
-    if info.isConfirmedItem(obj):
-        return True
-    # otherwise, when not replaying the request already, it is tried to
-    # delete the object, making it possible to find out if it was referenced,
-    # i.e. in case a link integrity exception was raised
-    linked = False
-    parent = obj.aq_inner.aq_parent
-    try:
-        parent.manage_delObjects(obj.getId())
-    except OFS.ObjectManager.BeforeDeleteException, e:
-        linked = True
-    except: # ignore other exceptions, not useful to us at this point
-        pass
-    # since this function is called first thing in `delete_confirmation.cpy`
-    # and therefore nothing can possibly have changed yet at this point, we
-    # might as well "begin" a new transaction instead of using a savepoint,
-    # which creates a funny exception when using zeo (see #6666)
-    transaction.begin()
-    return linked
