@@ -77,7 +77,6 @@ setup(name='Plone',
           'plone.app.iterate',
           'plone.app.kss',
           'plone.app.layout',
-          'plone.app.linkintegrity >=1.0.3',
           'plone.app.locales',
           'plone.app.openid',
           'plone.app.portlets',
